cmake_minimum_required(VERSION 3.15)
project(keepaway)

set(CMAKE_CXX_STANDARD 14)

include_directories(src)
include_directories(src/chain_action)

add_executable(keepaway
        src/chain_action/actgen_action_chain_length_filter.h
        src/chain_action/actgen_cross.cpp
        src/chain_action/actgen_cross.h
        src/chain_action/actgen_direct_pass.cpp
        src/chain_action/actgen_direct_pass.h
        src/chain_action/actgen_self_pass.cpp
        src/chain_action/actgen_self_pass.h
        src/chain_action/actgen_shoot.cpp
        src/chain_action/actgen_shoot.h
        src/chain_action/actgen_short_dribble.cpp
        src/chain_action/actgen_short_dribble.h
        src/chain_action/actgen_simple_dribble.cpp
        src/chain_action/actgen_simple_dribble.h
        src/chain_action/actgen_strict_check_pass.cpp
        src/chain_action/actgen_strict_check_pass.h
        src/chain_action/action_chain_graph.cpp
        src/chain_action/action_chain_graph.h
        src/chain_action/action_chain_holder.cpp
        src/chain_action/action_chain_holder.h
        src/chain_action/action_generator.h
        src/chain_action/action_state_pair.h
        src/chain_action/bhv_chain_action.cpp
        src/chain_action/bhv_chain_action.h
        src/chain_action/bhv_normal_dribble.cpp
        src/chain_action/bhv_normal_dribble.h
        src/chain_action/bhv_pass_kick_find_receiver.cpp
        src/chain_action/bhv_pass_kick_find_receiver.h
        src/chain_action/bhv_strict_check_shoot.cpp
        src/chain_action/bhv_strict_check_shoot.h
        src/chain_action/body_force_shoot.cpp
        src/chain_action/body_force_shoot.h
        src/chain_action/clear_ball.cpp
        src/chain_action/clear_ball.h
        src/chain_action/clear_generator.cpp
        src/chain_action/clear_generator.h
        src/chain_action/cooperative_action.cpp
        src/chain_action/cooperative_action.h
        src/chain_action/cross_generator.cpp
        src/chain_action/cross_generator.h
        src/chain_action/dribble.cpp
        src/chain_action/dribble.h
        src/chain_action/field_analyzer.cpp
        src/chain_action/field_analyzer.h
        src/chain_action/field_evaluator.h
        src/chain_action/hold_ball.cpp
        src/chain_action/hold_ball.h
        src/chain_action/neck_turn_to_receiver.cpp
        src/chain_action/neck_turn_to_receiver.h
        src/chain_action/pass.cpp
        src/chain_action/pass.h
        src/chain_action/pass_checker.h
        src/chain_action/predict_ball_object.h
        src/chain_action/predict_player_object.h
        src/chain_action/predict_state.cpp
        src/chain_action/predict_state.h
        src/chain_action/self_pass_generator.cpp
        src/chain_action/self_pass_generator.h
        src/chain_action/shoot.cpp
        src/chain_action/shoot.h
        src/chain_action/shoot_generator.cpp
        src/chain_action/shoot_generator.h
        src/chain_action/short_dribble_generator.cpp
        src/chain_action/short_dribble_generator.h
        src/chain_action/simple_pass_checker.cpp
        src/chain_action/simple_pass_checker.h
        src/chain_action/strict_check_pass_generator.cpp
        src/chain_action/strict_check_pass_generator.h
        src/chain_action/tackle_generator.cpp
        src/chain_action/tackle_generator.h
        src/bhv_basic_move.cpp
        src/bhv_basic_move.h
        src/bhv_basic_offensive_kick.cpp
        src/bhv_basic_offensive_kick.h
        src/bhv_basic_tackle.cpp
        src/bhv_basic_tackle.h
        src/bhv_custom_before_kick_off.cpp
        src/bhv_custom_before_kick_off.h
        src/bhv_go_to_static_ball.cpp
        src/bhv_go_to_static_ball.h
        src/bhv_goalie_basic_move.cpp
        src/bhv_goalie_basic_move.h
        src/bhv_goalie_chase_ball.cpp
        src/bhv_goalie_chase_ball.h
        src/bhv_goalie_free_kick.cpp
        src/bhv_goalie_free_kick.h
        src/bhv_penalty_kick.cpp
        src/bhv_penalty_kick.h
        src/bhv_prepare_set_play_kick.cpp
        src/bhv_prepare_set_play_kick.h
        src/bhv_set_play.cpp
        src/bhv_set_play.h
        src/bhv_set_play_free_kick.cpp
        src/bhv_set_play_free_kick.h
        src/bhv_set_play_goal_kick.cpp
        src/bhv_set_play_goal_kick.h
        src/bhv_set_play_indirect_free_kick.cpp
        src/bhv_set_play_indirect_free_kick.h
        src/bhv_set_play_kick_in.cpp
        src/bhv_set_play_kick_in.h
        src/bhv_set_play_kick_off.cpp
        src/bhv_set_play_kick_off.h
        src/bhv_their_goal_kick_move.cpp
        src/bhv_their_goal_kick_move.h
        src/communication.h
        src/intention_receive.cpp
        src/intention_receive.h
        src/intention_wait_after_set_play_kick.cpp
        src/intention_wait_after_set_play_kick.h
        src/keepaway_communication.cpp
        src/keepaway_communication.h
        src/main_coach.cpp
        src/main_player.cpp
        src/main_trainer.cpp
        src/neck_default_intercept_neck.cpp
        src/neck_default_intercept_neck.h
        src/neck_goalie_turn_neck.cpp
        src/neck_goalie_turn_neck.h
        src/neck_offensive_intercept_neck.cpp
        src/neck_offensive_intercept_neck.h
        src/role_center_back.cpp
        src/role_center_back.h
        src/role_center_forward.cpp
        src/role_center_forward.h
        src/role_defensive_half.cpp
        src/role_defensive_half.h
        src/role_goalie.cpp
        src/role_goalie.h
        src/role_keepaway_keeper.cpp
        src/role_keepaway_keeper.h
        src/role_keepaway_taker.cpp
        src/role_keepaway_taker.h
        src/role_offensive_half.cpp
        src/role_offensive_half.h
        src/role_sample.cpp
        src/role_sample.h
        src/role_side_back.cpp
        src/role_side_back.h
        src/role_side_forward.cpp
        src/role_side_forward.h
        src/role_side_half.cpp
        src/role_side_half.h
        src/sample_coach.cpp
        src/sample_coach.h
        src/sample_communication.cpp
        src/sample_communication.h
        src/sample_field_evaluator.cpp
        src/sample_field_evaluator.h
        src/sample_player.cpp
        src/sample_player.h
        src/sample_trainer.cpp
        src/sample_trainer.h
        src/soccer_role.cpp
        src/soccer_role.h
        src/strategy.cpp
        src/strategy.h
        src/view_tactical.cpp
        src/view_tactical.h)
